Implement input validation, error handling and hashing

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,11 @@
                                 <a href="{{ url_for('admin.admin') }}" class="navbar-item">
                                     Admin
                                 </a>
-                                {#TODO: LOGIN#}
-                                <a href="" class="navbar-item">
+
+                                <a href="{{ url_for('users.login') }}" class="navbar-item">
                                     Login
                                 </a>
+
                                 <a href="{{ url_for('users.register') }}" class="navbar-item">
                                     Register
                                 </a>
