--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,5 @@
   CSC2031 Security & Programming Paradigms
 </h2>
 
-{#TODO: ADD NAME AND STUDENT NUMBER#}
-<p>Name ('Student Number')</p>
+<p>Rufus Ewings ('200440086')</p>
 {% endblock %}
