--- a/templates/lottery.html
+++ b/templates/lottery.html
@@ -19,32 +19,33 @@
             <form method="POST" action="/add_draw">
                 <div class="columns is-multiline is-centered">
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no1" id="no1" placeholder="value 1">
+                        <input class="input" type="number" name="no1" id="no1" placeholder="value 1" min="1" max="60" required>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no2" id="no2" placeholder="value 2">
+                        <input class="input" type="number" name="no2" id="no2" placeholder="value 2" min="1" max="60" required>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no3" id="no3" placeholder="value 3">
+                        <input class="input" type="number" name="no3" id="no3" placeholder="value 3" min="1" max="60" required>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no4" id="no4" placeholder="value 4">
+                        <input class="input" type="number" name="no4" id="no4" placeholder="value 4" min="1" max="60" required>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no5" id="no5" placeholder="value 5">
+                        <input class="input" type="number" name="no5" id="no5" placeholder="value 5" min="1" max="60" required>
                     </div>
                     <div class="column is-one-sixth">
-                        <input class="input" type="number" name="no6" id="no6" placeholder="value 6">
+                        <input class="input" type="number" name="no6" id="no6" placeholder="value 6" min="1" max="60" required>
                     </div>
                 </div>
                 <div class="field">
-                    <button type="button" class="button is-info is-centered" onclick="luckyDip()">Lucky
+                    <button type="button" id="btn" class="button is-info is-centered" onclick="luckyDip()">Lucky
                         Dip
                     </button>
                 </div>
                 <div class="field">
                     <button class="button is-info is-centered">Submit Draw</button>
                 </div>
+
             </form>
         </div>
     </div>
@@ -56,6 +57,7 @@
 
                     {# render playable draws #}
                     {% for draw in playable_draws %}
+                        {# change from draw.draw to draw when adding decryption #}
                         <p>{{ draw.draw }}</p>
                     {% endfor %}
 
@@ -87,10 +89,10 @@
                                 <td>{{ draw.round }}</td>
                                 <td>{{ draw.draw }}</td>
                                 <td>{{ draw.played }}</td>
-                                {% if draw.win %}
-                                    <td style="background-color: yellow">{{ draw.win }}</td>
+                                {% if draw.match %}
+                                    <td style="background-color: yellow">{{ draw.match }}</td>
                                 {% else %}
-                                    <td>{{ draw.win }}</td>
+                                    <td>{{ draw.match }}</td>
                                 {% endif %}
                             </tr>
                         {% endfor %}
