--- a/templates/register.html
+++ b/templates/register.html
@@ -11,45 +11,74 @@
                     </div>
                 {% endif %}
             {% endwith %}
+
             <form method="POST">
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
                         {{ form.email(class="input", placeholder="Email") }}
+                        {% for error in form.email.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.firstname(class="input", placeholder="First Name") }}
+                        {% for error in form.firstname.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.lastname(class="input", placeholder="Last Name") }}
+                        {% for error in form.lastname.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.phone(class="input", placeholder="Phone") }}
+                        {% for error in form.phone.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.password(class="input", placeholder="Password") }}
+                        {% for error in form.password.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.confirm_password(class="input", placeholder="Confirm Password") }}
+                        {% for error in form.confirm_password.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
 
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.pin_key(class="input", placeholder="PIN Key") }}
+                        {% for error in form.pin_key.errors %}
+                            {{ error }}
+                        {% endfor %}
                     </div>
                     <div>
-                        {# TODO: Add PIN generation setup instructions #}
+                        <p><b>Set up time-based PIN generator</b></p>
+                        <ul>
+                            <li>Download <a href="https://authy.com/download/" target="_blank"><u>Authy</u></a> on your device.</li>
+                            <li>Select add new account.</li>
+                            <li>Enter your PIN key.</li>
+                            <li>Enter name for new account.</li>
+                            <li>Select token length of 6.</li>
+                        </ul>
                     </div>
 
                 </div>
