Fix bug reading database

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,14 +29,14 @@
                             {% endfor %}
                         </div>
                     </div>
-{#                    <div class="field">#}
-{#                        <div class="control">#}
-{#                            {{ form.pin(class="input", placeholder="Time-Based PIN") }}#}
-{#                            {% for error in form.pin.errors %}#}
-{#                                {{ error }}#}
-{#                            {% endfor %}#}
-{#                        </div>#}
-{#                    </div>#}
+                    <div class="field">
+                        <div class="control">
+                            {{ form.pin(class="input", placeholder="Time-Based PIN") }}
+                            {% for error in form.pin.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                    </div>
 {#                    <div>#}
 {#                        {{ form.recaptcha }}#}
 {#                        {% for error in form.recaptcha.errors %}#}
