--- a/templates/base.html
+++ b/templates/base.html
@@ -29,17 +29,21 @@
                             <a href="{{ url_for('index') }}" class="navbar-item">
                                Home
                             </a>
-                                <a href="{{ url_for('users.profile') }}" class="navbar-item">
-                                    Profile
-                                </a>
-                                <a href="{{ url_for('lottery.lottery') }}" class="navbar-item">
-                                    Lottery
-                                </a>
-
-                                <a href="{{ url_for('admin.admin') }}" class="navbar-item">
-                                    Admin
-                                </a>
-
+                                {% if current_user.is_authenticated %}
+                                    <a href="{{ url_for('users.profile') }}" class="navbar-item">
+                                        Profile
+                                    </a>
+                                {% endif %}
+                                {% if current_user.is_authenticated %}
+                                    <a href="{{ url_for('lottery.lottery') }}" class="navbar-item">
+                                        Lottery
+                                    </a>
+                                {% endif %}
+                                {% if current_user.is_authenticated %}
+                                    <a href="{{ url_for('admin.admin') }}" class="navbar-item">
+                                        Admin
+                                    </a>
+                                {% endif %}
                                 <a href="{{ url_for('users.login') }}" class="navbar-item">
                                     Login
                                 </a>
@@ -47,11 +51,12 @@
                                 <a href="{{ url_for('users.register') }}" class="navbar-item">
                                     Register
                                 </a>
+                                {% if current_user.is_authenticated %}
                                  <a href="{{ url_for('users.account') }}" class="navbar-item">
                                     Account
                                 </a>
-                                {#TODO: LOGOUT#}
-                                <a href="" class="navbar-item">
+                                {% endif %}
+                                <a href="{{ url_for('users.logout') }}" class="navbar-item">
                                     Logout
                                 </a>
 
