--- a/templates/base.html
+++ b/templates/base.html
@@ -29,37 +29,41 @@
                             <a href="{{ url_for('index') }}" class="navbar-item">
                                Home
                             </a>
-                                {% if current_user.is_authenticated %}
+                                {% if current_user.is_authenticated and current_user.role=='user'%}
                                     <a href="{{ url_for('users.profile') }}" class="navbar-item">
                                         Profile
                                     </a>
                                 {% endif %}
-                                {% if current_user.is_authenticated %}
+                                {% if current_user.is_authenticated and current_user.role=='user'%}
                                     <a href="{{ url_for('lottery.lottery') }}" class="navbar-item">
                                         Lottery
                                     </a>
                                 {% endif %}
-                                {% if current_user.is_authenticated %}
+                                {% if current_user.is_authenticated and current_user.role=='admin' %}
                                     <a href="{{ url_for('admin.admin') }}" class="navbar-item">
                                         Admin
                                     </a>
                                 {% endif %}
-                                <a href="{{ url_for('users.login') }}" class="navbar-item">
-                                    Login
-                                </a>
-
-                                <a href="{{ url_for('users.register') }}" class="navbar-item">
-                                    Register
-                                </a>
-                                {% if current_user.is_authenticated %}
-                                 <a href="{{ url_for('users.account') }}" class="navbar-item">
-                                    Account
-                                </a>
+                                {% if not current_user.is_authenticated %}
+                                    <a href="{{ url_for('users.login') }}" class="navbar-item">
+                                        Login
+                                    </a>
                                 {% endif %}
-                                <a href="{{ url_for('users.logout') }}" class="navbar-item">
-                                    Logout
-                                </a>
-
+                                {% if not current_user.is_authenticated %}
+                                    <a href="{{ url_for('users.register') }}" class="navbar-item">
+                                        Register
+                                    </a>
+                                {% endif %}
+                                {% if current_user.is_authenticated%}
+                                     <a href="{{ url_for('users.account') }}" class="navbar-item">
+                                        Account
+                                    </a>
+                                {% endif %}
+                                {% if current_user.is_authenticated %}
+                                    <a href="{{ url_for('users.logout') }}" class="navbar-item">
+                                        Logout
+                                    </a>
+                                {% endif %}
                        </div>
                     </div>
                 </div>
